Update template for jpa MU-294

--- a/src/src/main/resources/application-local.yml.template
+++ b/src/src/main/resources/application-local.yml.template
@@ -26,9 +26,33 @@ app:
     authorizedRedirectUris: "op://mentorus/backend-local/jwt/authorized-redirect-uris"
 
 spring:
-  data:
-    mongodb:
-      uri: "op://mentorus/backend-local/mongodb/uri"
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      jakarta:
+        persistence:
+          query:
+            timeout: 20000
+      hibernate:
+        show_sql: true
+        enable_lazy_load_no_trans: true
+        jdbc:
+          batch_size: 10
+    open-in-view: false
+  datasource:
+    url: "op://mentorus/backend-local/jpa/datasource.url"
+    username: "op://mentorus/backend-local/jpa/datasource.username"
+    password: "op://mentorus/backend-local/jpa/datasource.password"
+    driver-class-name: org.postgresql.Driver
+  flyway:
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    enabled: true
+    schemas: public
+    user: "op://mentorus/backend-local/jpa/datasource.username"
+    password: "op://mentorus/backend-local/jpa/datasource.password"
+    locations: classpath:db/migration
   security:
     oauth2:
       client:
