--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,7 +7,7 @@ COPY --from=builder /dependencies/ ./
 COPY --from=builder /spring-boot-loader/ ./
 COPY --from=builder /snapshot-dependencies/ ./
 COPY --from=builder /application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
 
 EXPOSE 8080
 EXPOSE 8085
