Update fat jar and remove unused dependency MU-294

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,13 +1,17 @@
 FROM eclipse-temurin:21-jre-alpine AS builder
 COPY ./target/app.jar ./app.jar
-RUN java -Djarmode=layertools -jar ./app.jar extract
 
-FROM eclipse-temurin:21-jre-alpine
-COPY --from=builder /dependencies/ ./
-COPY --from=builder /spring-boot-loader/ ./
-COPY --from=builder /snapshot-dependencies/ ./
-COPY --from=builder /application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
+#RUN java -Djarmode=layertools -jar ./app.jar extract
+#
+#FROM eclipse-temurin:21-jre-alpine
+#COPY --from=builder /dependencies/ ./
+#COPY --from=builder /spring-boot-loader/ ./
+#COPY --from=builder /snapshot-dependencies/ ./
+#COPY --from=builder /application/ ./
+#ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
+
+# Fat ja
+ENTRYPOINT ["java", "-jar", "./app.jar"]
 
 EXPOSE 8080
 EXPOSE 8085
