--- a/src/pom.xml
+++ b/src/pom.xml
@@ -47,6 +47,8 @@
         <jsoup.version>1.17.2</jsoup.version>
         <html2pdf.version>5.0.1</html2pdf.version>
 
+        <tika.version>2.9.2</tika.version>
+
         <commonio.version>2.15.1</commonio.version>
         <common-csv.version>1.8</common-csv.version>
         <poi.version>5.2.5</poi.version>
@@ -275,7 +277,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>2.9.2</version>
+            <version>${tika.version}</version>
         </dependency>
 
         <dependency>
