--- a/src/pom.xml
+++ b/src/pom.xml
@@ -48,6 +48,7 @@
         <mapstruct.version>1.6.0.Beta1</mapstruct.version>
         <minio.version>8.5.10</minio.version>
         <pipelinr.version>0.8</pipelinr.version>
+        <modelmapper.version>3.2.0</modelmapper.version>
     </properties>
 
     <dependencies>
@@ -283,6 +284,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
         </dependency>
 
     </dependencies>
