Add jackson for java8 data type MU-333

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -193,10 +193,28 @@
             <artifactId>therapi-runtime-javadoc</artifactId>
             <version>${api-runtime-javadoc.version}</version>
         </dependency>
+        <!-- End spring doc -->
+
         <!-- Begin json parser -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-parameter-names</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate6</artifactId>
         </dependency>
         <!-- End json parser -->
 
