--- a/src/src/main/resources/application-common.yml.template
+++ b/src/src/main/resources/application-common.yml.template
@@ -44,6 +44,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
   mail:
     host: smtp.gmail.com
     port: 587
