--- a/src/pom.xml
+++ b/src/pom.xml
@@ -217,6 +217,10 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-hibernate6</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-blackbird</artifactId>
+        </dependency>
         <!-- End json parser -->
 
         <!-- Begin cronjob -->
