--- a/src/pom.xml
+++ b/src/pom.xml
@@ -329,6 +329,13 @@
             <artifactId>modelmapper</artifactId>
             <version>${modelmapper.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper-module-java8</artifactId>
+            <version>1.2.3</version>
+            <type>pom</type>
+        </dependency>
+
 
         <dependency>
             <groupId>com.querydsl</groupId>
